--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 
   <canvas id="vehicleHistogram" width="800" height="500"></canvas>
 
-<!--  <script src="static/script.js"></script>-->
-  <script src="static/script.js?v=1234"></script> <!--#avoid cache-->
-  <script src="static/vehicles_script.js?v=1234"></script> <!--#avoid cache-->
+  <script src="static/script.js"></script>
+  <script src="static/vehicles_script.js"></script>>
 </body>
 </html>
