added fuel chart

--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
       color: inherit;
     }
   </style>
+  <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate, max-age=0">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 </head>
 <body>
   <h1>VisualIne</h1>
   <button id="themeToggle">💡</button>
   <canvas id="barChart" width="800" height="500"></canvas>
 
+
   <!-- Include jQuery before your custom script -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <canvas id="vehicleHistogram" width="800" height="500"></canvas>
+  <canvas id="fuelChart" width="800" height="500"></canvas>
 
   <script src="static/script.js"></script>
-  <script src="static/vehicles_script.js"></script>>
+  <script src="static/vehicles_script.js?v=1235"></script>
+
 </body>
 </html>
