--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <canvas id="fuelChart" width="800" height="500"></canvas>
 
   <script src="static/script.js"></script>
-  <script src="static/vehicles_script.js?v=1235"></script>
+  <script type="module" src="static/vehicles_script.js?v=7"></script>
+  <script src="static/fuel.js?v=3"></script>
 
 </body>
 </html>
